Base theme: Tweak breakpoint for header download button to prevent button misalignment at a specific viewport width.
Props dufresnesteven, vajaparadarshit.
See #4848.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9759 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_wporg-header.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_wporg-header.scss
@@ -104,7 +104,7 @@
 			overflow: hidden;
 			padding: 0 0 34px;
 
-			@media screen and (max-width:768px) {
+			@media screen and (max-width:767px) {
 				display: block;
 				float: none;
 				margin: 10px 20px 20px;
